--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-route": "1.2.16",
     "font-awesome": "4.3.0",
     "angular-bootstrap": "0.12.0",
-    "oclazyload": "~0.5.2",
+    "oclazyload": "^1.0.9",
     "angular-loading-bar": "~0.7.0",
     "angular-ui-router": "~0.2.13",
     "angular-toggle-switch": "~1.2.1",
@@ -27,7 +27,8 @@
     "angular-scenario": "1.2.16"
   },
   "resolutions": {
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "oclazyload": "^1.0.9"
   },
   "appPath": "app"
 }
