--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "metisMenu": "~1.1.3",
     "angular-chart.js": "~0.5.2",
     "restangular": "^1.5.2",
-    "lodash": "^4.16.4"
+    "lodash": "^4.16.4",
+    "satellizer": "^0.15.5",
+    "angular-notify": "^2.5.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
@@ -28,7 +30,8 @@
   },
   "resolutions": {
     "bootstrap": "~3.1.1",
-    "oclazyload": "^1.0.9"
+    "oclazyload": "^1.0.9",
+    "ember": "0.15.5"
   },
   "appPath": "app"
 }
