--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "restangular": "^1.5.2",
     "lodash": "^4.16.4",
     "satellizer": "^0.15.5",
-    "angular-notify": "^2.5.0"
+    "angular-notify": "^2.5.0",
+    "angular-websocket": "^2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
