--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "type": "git",
     "url": "https://github.com/start-angular/sb-admin-angular"
   },
-  "dependencies": {},
+  "dependencies": {
+    "angular-websocket": "^2.0.1",
+    "angularjs-datepicker": "^2.1.6"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
@@ -27,6 +30,7 @@
     "grunt-ng-annotate": "^0.10.0",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
+    "gulp": "^3.9.1",
     "jasmine-core": "^2.1.3",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.31",
